luồng booking semi-complete