@@ -1,173 +1,9 @@
-//package com.example.demo.service;
-//
-//import com.example.demo.Repository.BookingRepository;
-//import com.example.demo.Repository.PsychologistSlotRepository;
-//import com.example.demo.Repository.SlotRepository;
-//import com.example.demo.Repository.UserRepository;
-//import com.example.demo.entity.Booking;
-//import com.example.demo.entity.PsychologistSlot;
-//import com.example.demo.entity.Slot;
-//
-//import com.example.demo.entity.User;
-//import com.example.demo.enums.AvailabilityStatus;
-//import com.example.demo.enums.RoleEnum;
-//import org.springframework.beans.factory.annotation.Autowired;
-//import org.springframework.http.HttpStatus;
-//import org.springframework.http.ResponseEntity;
-//import org.springframework.stereotype.Service;
-//
-//import java.time.Duration;
-//import java.time.LocalDate;
-//import java.time.LocalTime;
-//import java.util.List;
-//import java.util.Optional;
-//import java.util.stream.Collectors;
-//
-//@Service
-//public class SlotService {
-////    private final SlotRepository slotRepository;
-////    private final PsychologistRepository psychologistRepository;
-////    private final PsychologistSlotRepository psychologistSlotRepository;
-////
-////    public SlotService(SlotRepository slotRepository, PsychologistRepository psychologistRepository, PsychologistSlotRepository psychologistSlotRepository) {
-////        this.slotRepository = slotRepository;
-////        this.psychologistRepository = psychologistRepository;
-////        this.psychologistSlotRepository = psychologistSlotRepository;
-////    }
-//
-//    @Autowired
-//    SlotRepository slotRepository;
-//
-//    @Autowired
-//    PsychologistSlotRepository psychologistSlotRepository;
-//
-//    @Autowired
-//    UserRepository userRepository;
-//
-//    @Autowired
-//    BookingRepository bookingRepository;
-//
-//    public PsychologistSlot createSlot(Long psychologistId, LocalDate date, LocalTime startTime, LocalTime endTime) {
-//        User psychologist = userRepository.findById(psychologistId)
-//                .filter(u -> u.getRoleEnum() == RoleEnum.PSYCHOLOGIST && !u.isDeleted)
-//                .orElseThrow(() -> new RuntimeException("Psychologist not found"));
-//
-//        Duration duration = Duration.between(startTime, endTime);
-//        if (duration.toMinutes() > 120) {
-//            throw new IllegalArgumentException("Slot duration cannot exceed 2 hours");
-//        }
-//
-////        Slot slot = Slot.builder()
-////                .availableDate(date)
-//////                .psychologistSlot(psychologistSlot)
-////                .startTime(startTime)
-////                .endTime(endTime)
-////                .available(true)
-////                .build();
-////        slot = slotRepository.save(slot);
-////
-////        PsychologistSlot psychologistSlot = PsychologistSlot.builder()
-////                .psychologist(psychologist)
-////                .slot(slot)
-////                .availabilityStatus(AvailabilityStatus.AVAILABLE)
-////                .build();
-////        return psychologistSlotRepository.save(psychologistSlot);
-//
-//        // Tạo Slot trước
-//        Slot slot = Slot.builder()
-//                .availableDate(date)
-//                .startTime(startTime)
-//                .endTime(endTime)
-//                .available(true)
-//                .build();
-//
-//        // Tạo PsychologistSlot và thiết lập mối quan hệ
-//        PsychologistSlot psychologistSlot = PsychologistSlot.builder()
-//                .psychologist(psychologist)
-//                .slot(slot)
-//                .availabilityStatus(AvailabilityStatus.AVAILABLE)
-//                .build();
-//
-//        // Thiết lập mối quan hệ ngược từ Slot về PsychologistSlot
-//        slot.setPsychologistSlot(psychologistSlot);
-//
-//        // Lưu Slot trước để có slot_id
-//        slotRepository.save(slot);
-//        // Lưu PsychologistSlot để có psychologist_slot_id
-//        psychologistSlot = psychologistSlotRepository.save(psychologistSlot);
-//
-//        return psychologistSlot;
-//    }
-//
-//    public List<PsychologistSlot> getPsychologistSlots(Long psychologistId) {
-//        return psychologistSlotRepository.findAll().stream()
-//                .filter(slot -> slot.getPsychologist().getUserID().equals(psychologistId))
-//                .collect(Collectors.toList());
-//    }
-//
-//    public void updateSlot(Long psychologistId, Integer psychologistSlotId, LocalDate date, LocalTime startTime, LocalTime endTime) {
-//        PsychologistSlot slot = psychologistSlotRepository.findById(psychologistSlotId)
-//                .orElseThrow(() -> new RuntimeException("Slot not found"));
-//        Duration duration = Duration.between(startTime, endTime);
-//
-//        if (duration.toMinutes() > 120) {
-//            throw new IllegalArgumentException("Slot duration cannot exceed 2 hours");
-//        }
-//
-//        if (!slot.getPsychologist().getUserID().equals(psychologistId)) {
-//            throw new RuntimeException("Unauthorized");
-//        }
-//        if (slot.getAvailabilityStatus() != AvailabilityStatus.AVAILABLE) {
-//            throw new RuntimeException("Cannot update a booked slot");
-//        }
-//        Slot slotEntity = slot.getSlot();
-//        slotEntity.setAvailableDate(date);
-//        slotEntity.setStartTime(startTime);
-//        slotEntity.setEndTime(endTime);
-//        slotRepository.save(slotEntity);
-//    }
-//
-//    public ResponseEntity<String> deleteSlot(Long psychologistId, Integer psychologistSlotId) {
-//        PsychologistSlot slot = psychologistSlotRepository.findById(psychologistSlotId)
-//                .orElseThrow(() -> new RuntimeException("Slot not found"));
-//        if (!slot.getPsychologist().getUserID().equals(psychologistId)) {
-//            return ResponseEntity.status(HttpStatus.FORBIDDEN).body("Unauthorized");
-//        }
-//        if (slot.getAvailabilityStatus() != AvailabilityStatus.AVAILABLE) {
-//            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Cannot delete a booked slot");
-//        }
-//
-//        // Kiểm tra booking liên quan đến Slot
-//        List<Booking> associatedBookings = bookingRepository.findBySlotSlotId(slot.getSlot().getSlotId());
-//        if (!associatedBookings.isEmpty()) {
-//            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-//                    .body("Cannot delete slot because it has " + associatedBookings.size() + " associated booking(s).");
-//        }
-//        // Nếu không có booking, tiến hành xóa
-//        try {
-//            psychologistSlotRepository.delete(slot);
-//            slotRepository.delete(slot.getSlot());
-//            return ResponseEntity.ok("Slot deleted successfully");
-//        } catch (Exception e) {
-//            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to delete slot");
-//        }
-//    }
-//
-//    public List<PsychologistSlot> getAvailableSlots(Long psychologistId) {
-//        return psychologistSlotRepository.findByPsychologistUserIDAndAvailabilityStatus(psychologistId, "AVAILABLE");
-//    }
-//
-//}
-//
-
 package com.example.demo.service;
 
 import com.example.demo.Repository.BookingRepository;
-import com.example.demo.Repository.PsychologistSlotRepository;
 import com.example.demo.Repository.SlotRepository;
 import com.example.demo.Repository.UserRepository;
 import com.example.demo.entity.Booking;
-import com.example.demo.entity.PsychologistSlot;
 import com.example.demo.entity.Slot;
 import com.example.demo.entity.User;
 import com.example.demo.enums.AvailabilityStatus;
@@ -181,7 +17,6 @@ import java.time.Duration;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class SlotService {
@@ -189,15 +24,12 @@ public class SlotService {
     SlotRepository slotRepository;
 
     @Autowired
-    PsychologistSlotRepository psychologistSlotRepository;
-
-    @Autowired
     UserRepository userRepository;
 
     @Autowired
     BookingRepository bookingRepository;
 
-    public PsychologistSlot createSlot(Long psychologistId, LocalDate date, LocalTime startTime, LocalTime endTime) {
+    public Slot createSlot(Long psychologistId, LocalDate date, LocalTime startTime, LocalTime endTime) {
         User psychologist = userRepository.findById(psychologistId)
                 .filter(u -> u.getRoleEnum() == RoleEnum.PSYCHOLOGIST && !u.isDeleted)
                 .orElseThrow(() -> new RuntimeException("Psychologist not found"));
@@ -207,40 +39,25 @@ public class SlotService {
             throw new IllegalArgumentException("Slot duration cannot exceed 2 hours");
         }
 
-        // Tạo Slot trước
         Slot slot = Slot.builder()
+                .user(psychologist)
                 .availableDate(date)
                 .startTime(startTime)
                 .endTime(endTime)
-                .available(true)
-                .build();
-
-        // Tạo PsychologistSlot và thiết lập mối quan hệ
-        PsychologistSlot psychologistSlot = PsychologistSlot.builder()
-                .psychologist(psychologist)
-                .slot(slot)
                 .availabilityStatus(AvailabilityStatus.AVAILABLE)
                 .build();
 
-        // Thiết lập mối quan hệ ngược từ Slot về PsychologistSlot
-        slot.setPsychologistSlot(psychologistSlot);
-
-        // Lưu Slot trước để có slot_id
-        slotRepository.save(slot);
-        // Lưu PsychologistSlot để có psychologist_slot_id
-        psychologistSlot = psychologistSlotRepository.save(psychologistSlot);
-
-        return psychologistSlot;
+        return slotRepository.save(slot);
     }
 
-    public List<PsychologistSlot> getPsychologistSlots(Long psychologistId) {
-        return psychologistSlotRepository.findAll().stream()
-                .filter(slot -> slot.getPsychologist().getUserID().equals(psychologistId))
-                .collect(Collectors.toList());
+    public List<Slot> getPsychologistSlots(Long psychologistId) {
+        return slotRepository.findAll().stream()
+                .filter(slot -> slot.getUser().getUserID().equals(psychologistId))
+                .toList();
     }
 
-    public void updateSlot(Long psychologistId, Integer psychologistSlotId, LocalDate date, LocalTime startTime, LocalTime endTime) {
-        PsychologistSlot psychologistSlot = psychologistSlotRepository.findById(psychologistSlotId)
+    public void updateSlot(Long psychologistId, Integer slotId, LocalDate date, LocalTime startTime, LocalTime endTime) {
+        Slot slot = slotRepository.findById(slotId)
                 .orElseThrow(() -> new RuntimeException("Slot not found"));
         Duration duration = Duration.between(startTime, endTime);
 
@@ -248,41 +65,38 @@ public class SlotService {
             throw new IllegalArgumentException("Slot duration cannot exceed 2 hours");
         }
 
-        if (!psychologistSlot.getPsychologist().getUserID().equals(psychologistId)) {
+        if (!slot.getUser().getUserID().equals(psychologistId)) {
             throw new RuntimeException("Unauthorized");
         }
-        if (psychologistSlot.getAvailabilityStatus() != AvailabilityStatus.AVAILABLE) {
+        if (slot.getAvailabilityStatus() != AvailabilityStatus.AVAILABLE) {
             throw new RuntimeException("Cannot update a booked slot");
         }
 
-        Slot slotEntity = psychologistSlot.getSlot();
-        slotEntity.setAvailableDate(date);
-        slotEntity.setStartTime(startTime);
-        slotEntity.setEndTime(endTime);
-        slotRepository.save(slotEntity);
+        slot.setAvailableDate(date);
+        slot.setStartTime(startTime);
+        slot.setEndTime(endTime);
+        slotRepository.save(slot);
     }
 
-    public ResponseEntity<String> deleteSlot(Long psychologistId, Integer psychologistSlotId) {
-        PsychologistSlot psychologistSlot = psychologistSlotRepository.findById(psychologistSlotId)
+    public ResponseEntity<String> deleteSlot(Long psychologistId, Integer slotId) {
+        Slot slot = slotRepository.findById(slotId)
                 .orElseThrow(() -> new RuntimeException("Slot not found"));
-        if (!psychologistSlot.getPsychologist().getUserID().equals(psychologistId)) {
+        if (!slot.getUser().getUserID().equals(psychologistId)) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN).body("Unauthorized");
         }
-        if (psychologistSlot.getAvailabilityStatus() != AvailabilityStatus.AVAILABLE) {
+        if (slot.getAvailabilityStatus() != AvailabilityStatus.AVAILABLE) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Cannot delete a booked slot");
         }
 
         // Kiểm tra booking liên quan đến Slot
-        List<Booking> associatedBookings = bookingRepository.findBySlotSlotId(psychologistSlot.getSlot().getSlotId());
+        List<Booking> associatedBookings = bookingRepository.findBySlotSlotId(slot.getSlotId());
         if (!associatedBookings.isEmpty()) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                     .body("Cannot delete slot because it has " + associatedBookings.size() + " associated booking(s).");
         }
 
-        // Xóa PsychologistSlot và Slot
+        // Xóa Slot
         try {
-            Slot slot = psychologistSlot.getSlot();
-            psychologistSlotRepository.delete(psychologistSlot);
             slotRepository.delete(slot);
             return ResponseEntity.ok("Slot deleted successfully");
         } catch (Exception e) {
@@ -290,7 +104,9 @@ public class SlotService {
         }
     }
 
-    public List<PsychologistSlot> getAvailableSlots(Long psychologistId) {
-        return psychologistSlotRepository.findByPsychologistUserIDAndAvailabilityStatus(psychologistId, "AVAILABLE");
+    public List<Slot> getAvailableSlots(Long psychologistId) {
+        return slotRepository.findAll().stream()
+                .filter(slot -> slot.getUser().getUserID().equals(psychologistId) && slot.getAvailabilityStatus() == AvailabilityStatus.AVAILABLE)
+                .toList();
     }
 }
